bug fixed share post is visible now

--- a/client/src/components/Chat/chat.css
+++ b/client/src/components/Chat/chat.css
@@ -58,7 +58,7 @@
   
    .user-list-panel {
     width: 300px;
-    height: 84vh;
+    height: 95vh;
     border-bottom-left-radius: 8pxs;
     border-top-left-radius: 8px;
     border-right: 1px solid #ccc;
